# LLMOps-Projects

./: .gitignore
P1_Document_Portal/: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
P1_Document_Portal/notebook/: experiments.ipynb
