[project]
name = "p1-document-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "python-dotenv>=1.1.1",
    "whenever>=0.8.7",
]
